# nortel-voiceware-decoder

./: .gitignore  CMakeLists.txt  README.md  nortel-voiceware-decoder.c  voiceware.map
.github/workflows/: prerelease.yml  release.yml
